; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_ht.c_ieee80211_add_htinfo_vendor.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_ht.c_ieee80211_add_htinfo_vendor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_node = type { i32 }

@IEEE80211_ELEMID_VENDOR = common dso_local global i32 0, align 4
@BCM_OUI = common dso_local global i32 0, align 4
@BCM_OUI_HTINFO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ieee80211_add_htinfo_vendor(i32* %0, %struct.ieee80211_node* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.ieee80211_node*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.ieee80211_node* %1, %struct.ieee80211_node** %4, align 8
  %5 = load i32, i32* @IEEE80211_ELEMID_VENDOR, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 0
  store i32 %5, i32* %7, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 1
  store i32 6, i32* %9, align 4
  %10 = load i32, i32* @BCM_OUI, align 4
  %11 = ashr i32 %10, 0
  %12 = and i32 %11, 255
  %13 = load i32*, i32** %3, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 2
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* @BCM_OUI, align 4
  %16 = ashr i32 %15, 8
  %17 = and i32 %16, 255
  %18 = load i32*, i32** %3, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 3
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* @BCM_OUI, align 4
  %21 = ashr i32 %20, 16
  %22 = and i32 %21, 255
  %23 = load i32*, i32** %3, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 4
  store i32 %22, i32* %24, align 4
  %25 = load i32, i32* @BCM_OUI_HTINFO, align 4
  %26 = load i32*, i32** %3, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 5
  store i32 %25, i32* %27, align 4
  %28 = load i32*, i32** %3, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 6
  %30 = load %struct.ieee80211_node*, %struct.ieee80211_node** %4, align 8
  %31 = call i32* @ieee80211_add_htinfo_body(i32* %29, %struct.ieee80211_node* %30)
  ret i32* %31
}

declare dso_local i32* @ieee80211_add_htinfo_body(i32*, %struct.ieee80211_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
